--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-custom-scroll": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
