--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "chrome-aws-lambda": "^5.2.1",
     "eslint": "^7.10.0",
     "eslint-plugin-react": "^7.21.3",
-    "puppeteer": "^5.2.1",
-    "puppeteer-core": "^5.2.1",
     "serverless-bundle": "^1.3.3",
     "serverless-pseudo-parameters": "^2.5.0",
-    "webpack": "^4.35.2"
+    "serverless-webpack": "^5.3.5",
+    "webpack": "^4.44.2"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
@@ -27,6 +25,7 @@
     "@middy/http-json-body-parser": "^1.4.0",
     "aws-sdk": "^2.639.0",
     "http-errors": "^1.8.0",
+    "jsdom": "^16.4.0",
     "node-fetch": "^2.6.1"
   },
   "scripts": {
